--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,18 @@
     <string name="home_will_movie">即将上映</string>
 
 
+    <string name="studio_near_movie">附近影院</string>
+    <string name="studio_recommended_movie">推荐影院</string>
 
+
+    <string name="mine_sign_in">签到</string>
+    <string name="mine_info">我的信息</string>
+    <string name="mine_attention">我的关注</string>
+    <string name="mine_ticket_histroy">购票记录</string>
+    <string name="mine_feedback">意见反馈</string>
+    <string name="mine_version">最新版本</string>
+    <string name="mine_exit_out">退出登录</string>
+    <string name="mine_messages">©八维移动通信学院毕业作品</string>
 
 
 </resources>
