--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,14 +41,8 @@
     <string name="studio_recommended_movie">推荐影院</string>
 
     <string name="mine_sign_in">签到</string>
-    <string name="mine_info">我的信息</string>
-    <string name="mine_attention">我的关注</string>
-    <string name="mine_ticket_histroy">购票记录</string>
-    <string name="mine_feedback">意见反馈</string>
-    <string name="mine_version">最新版本</string>
-    <string name="mine_exit_out">退出登录</string>
-    <string name="mine_messages">©八维移动通信学院毕业作品</string>
 
+    <string name="mine_info">我的信息</string>
     <string name="info_mine">我的信息</string>
     <string name="info_mine_icon">用户头像</string>
     <string name="info_mine_name">用户昵称</string>
@@ -58,6 +52,20 @@
     <string name="info_mine_email">邮箱</string>
     <string name="info_mine_reset_pws">重置密码</string>
     <string name="info_mine_reset_info">修改信息</string>
+
+
+    <string name="mine_feedback">意见反馈</string>
+    <string name="mine_feedback_hint">写下您对产品的感受吧！工作人员将会在第一时间评估处理。</string>
+    <string name="mine_feedback_submit">提交</string>
+
+
+    <string name="mine_attention">我的关注</string>
+    <string name="mine_ticket_histroy">购票记录</string>
+    <string name="mine_version">最新版本</string>
+    <string name="mine_exit_out">退出登录</string>
+    <string name="mine_messages">©八维移动通信学院毕业作品</string>
+
+
 
 
 </resources>
